force-app/main/default/objects/Asset/fields/Asset_Hierarchy_Path__c.field-meta.xml
<CustomField>
    <fullName>Asset_Hierarchy_Path__c</fullName>
    <formula>Name + BLANKVALUE(" ➡️ " + Asset_Type__r.Type_Hierarchy_Path__c, "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Hierarchy Path</label>
    <type>Text</type>
</CustomField>