force-app/main/default/objects/Asset/fields/Hierarchy_Display__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Display__c</fullName>
    <formula>IF(
  ISBLANK(ParentId),
  Name,
  IF(
    ISBLANK(Parent.ParentId),
    "├── " + Name,
    IF(
      ISBLANK(Parent.Parent.ParentId),
      "│   ├── " + Name,
      "│   │   ├── " + Name
    )
  )
)</formula>
    <label>Hierarchy Display</label>
    <type>Text</type>
</CustomField>