force-app/main/default/objects/Asset/fields/Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Level__c</fullName>
    <formula>IF(
  ISBLANK(ParentId),
  1,
  IF(
    ISBLANK(Parent.ParentId),
    2,
    IF(
      ISBLANK(Parent.Parent.ParentId),
      3,
      4
    )
  )
)</formula>
    <label>Hierarchy Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>