force-app/main/default/objects/Asset/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Asset_Type__c</columns>
    <columns>ASSET.STATUS</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>Asset_Hierarchy_Path__c</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
</ListView>